# AgentProbe

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  agentprobe.yaml  amber.json  docker-compose.local.yml  pyproject.toml  requirements.txt  run.sh  scenario.toml
.github/workflows/: agentbeats.yml  docker-publish-competitor.yml  docker-publish.yml
agentprobe/: __init__.py  cli.py  config.py  llm_env.py
agentprobe/a2a/: __init__.py  adapter.py  client.py  schemas.py  server.py
agentprobe/attacks/: __init__.py  base.py  data_exfiltration.py  prompt_extraction.py  prompt_injection.py  reasoning_hijack.py  tool_manipulation.py
agentprobe/evaluation/: __init__.py  owasp_mapping.py  severity_scorer.py
agentprobe/models/: __init__.py  schemas.py
agentprobe/report/: __init__.py  generator.py
agentprobe/report/templates/: report.html
agentprobe/swarm/: __init__.py  attack_agent.py  evaluator_agent.py  orchestrator.py  recon_agent.py  reporter_agent.py
dashboard/: app.py
demos/: Dockerfile  a2a_scan.py  amber.json  demo_evaluator_agent.py
scripts/: validate_gateway.py
web/: package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
